Changes color to mikeGreen

--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -9,6 +9,7 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
+$mikeGreen: #01bc84 !default;
 
 $blue: #03a9f4 !default;
 $indigo: #3f51b5 !default;
