Updates margin on mobile

--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -99,6 +99,10 @@ nav {
     border-radius: 0;
     border-width: 1px 0 1px 0;
     box-shadow: 0 0 .75rem rgba(0,0,0,.15)!important;
+    margin: 2rem 0 2rem 0 !important;
+  }
+  .card-img-top, .card-header, .card-footer {
+    border-radius: 0;
   }
   nav {
     box-shadow: 0;
