--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -93,6 +93,16 @@ nav {
   box-shadow: 0 .15rem .5rem rgba(0,0,0,.15)!important;
 }
 
+.card-body p:last-child {
+  margin-bottom: 0;
+}
+
+blockquote {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
 // Example usage:
 @include media-breakpoint-down(xs) {
   .card {
