--- a/src/scss/gatstrap.scss
+++ b/src/scss/gatstrap.scss
@@ -101,6 +101,12 @@ blockquote {
   font-size: 1.25rem;
   line-height: 1.5;
   margin-bottom: 20px;
+  background: rgba(0,0,0,.03);
+  border-left: 4px $mikeGreen solid;
+}
+
+.card-body blockquote:last-child {
+  margin-bottom: 0;
 }
 
 // Example usage:
